# Ishod

./: .gitignore  CMakeLists.txt  PROJECT_INFO.md  README.md  libx.h  main.cpp
aimbot/: Aimbot.cpp  Aimbot.h
config/: Config.cpp  Config.h
entities/: Grenade.cpp  Grenade.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
esp/: ESP.cpp  ESP.h
game/: Game.cpp  Game.h
gui/: GUI.cpp  GUI.h
imgl3w/: imgl3w.cpp
imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
imgui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
math/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
